fix(MOI-1378): no space placeholder alignment

--- a/src/stylesheets/legacy-styles.css
+++ b/src/stylesheets/legacy-styles.css
@@ -9683,7 +9683,6 @@ pre,
     font-weight: bold;
   }
   .usage-page__no-spaces-placeholder {
-    grid-column-end: span 2;
     font-weight: 600;
     font-size: 2rem;
     line-height: 1.2em;
@@ -9691,6 +9690,7 @@ pre,
     text-align: center;
     position: absolute;
     top: 40%;
+    left:0
   }
   .resource-list {
     margin: 40px;
